# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/tools/bindings/mojom.gni")

mojom("interfaces") {
  sources = [
    "uuid.mojom",
  ]

  # TODO(crbug.com/699569): Convert to use the new JS bindings.
  use_new_js_bindings = false
}

mojom("fake_bluetooth_interfaces") {
  sources = [
    "test/fake_bluetooth.mojom",
  ]

  public_deps = [
    ":interfaces",
  ]

  use_once_callback = true

  # TODO(crbug.com/699569): Convert to use the new JS bindings.
  use_new_js_bindings = false
}

mojom("experimental_interfaces") {
  sources = [
    "adapter.mojom",
    "device.mojom",
  ]

  public_deps = [
    ":interfaces",
  ]

  visibility = [
    # TODO(scheib) Before Landing, why are these public?
    # TODO(scheib) Before Landing, why are these public?
    # TODO(scheib) Before Landing, why are these public?
    "//device/bluetooth:mojo",
    #"//chrome/browser:*",
    "//chrome/browser/ui/webui/bluetooth_internals:*",

    # TODO(scheib) Before Landing, is this needed?
    #"//chrome/browser/ui:*",
  ]

  # TODO(crbug.com/699569): Convert to use the new JS bindings.
  use_new_js_bindings = false
}
