# Copyright 2017 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/tools/bindings/mojom.gni")

source_set("bluetooth_internals") {
  sources = [
    "bluetooth_internals_handler.cc",
    "bluetooth_internals_handler.h",
    "bluetooth_internals_ui.cc",
    "bluetooth_internals_ui.h",
  ]

  public_deps = [
    "//device/bluetooth:experimental_mojo",
  ]

  deps = [
    ":mojo_bindings",
    "//content/public/browser",
  ]
}

mojom("mojo_bindings") {
  sources = [
    "bluetooth_internals.mojom",
  ]

  deps = [
    "//device/bluetooth/public/interfaces:experimental_interfaces",
  ]
}
